--- a/css/styles.css
+++ b/css/styles.css
@@ -595,7 +595,7 @@ body {
 .sub_vis_bg {
   width: 100%;
   height: 890px;
-  background: url(../sub/images/work01_vis.jpg) no-repeat top / cover;
+  background: url(../sub/images/work01_vis.jpg) no-repeat center / cover;
   background-attachment: fixed;
   background-color: #eee;
 }
