--- a/css/styles.css
+++ b/css/styles.css
@@ -595,10 +595,14 @@ body {
 .sub_vis_bg {
   width: 100%;
   height: 890px;
-  background: url(../sub/images/work01_vis.jpg) no-repeat center / cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   background-attachment: fixed;
   background-color: #eee;
 }
+
+.sub05_vis_bg { background: url(../sub/images/work05_vis.jpg) }
 
 #sub_desc {
   margin: 20vh 0;
