--- a/css/styles.css
+++ b/css/styles.css
@@ -609,6 +609,19 @@ body {
 .work05_vis_bg { background-image: url(../sub/images/work05_vis.jpg) }
 .work06_vis_bg { background-image: url(../sub/images/work06_vis.jpg) }
 
+#work_tab{float:left; width:600px; height:290px;}
+/* .tabnav{font-size:0;  border:1px solid #ddd;} */
+.tabnav li{display: inline-block;  height:46px; text-align:center; border-right:1px solid #ddd;}
+.tabnav li a:before{content:""; position:absolute; left:0; top:0px; width:100%; height:3px; }
+.tabnav li a.active:before{background:#7ea21e;}
+.tabnav li a.active{border-bottom:1px solid #fff;}
+.tabnav li a{ position:relative; display:block; background: #f8f8f8; color: #000; padding:0 30px; line-height:46px; text-decoration:none; font-size:16px;}
+.tabnav li a:hover,
+.tabnav li a.active{background:#fff; color:#7ea21e; }
+.tabcontent{}
+
+
+
 #sub_desc {
   margin: 20vh 0;
 }
