--- a/css/styles.css
+++ b/css/styles.css
@@ -739,23 +739,23 @@ body {
 }
 
 /* work_nav */
-.sub01 .work_nav_prev .bg_wrap { background: url(../images/work_thum_02.jpg) }
-.sub01 .work_nav_next .bg_wrap { background: url(../images/work_thum_06.jpg) }
+.work01 .work_nav_prev .bg_wrap { background: url(../images/work_thum_02.jpg) }
+.work01 .work_nav_next .bg_wrap { background: url(../images/work_thum_06.jpg) }
 
-.sub02 .work_nav_prev .bg_wrap { background: url(../images/work_thum_03.jpg) }
-.sub02 .work_nav_next .bg_wrap { background: url(../images/work_thum_01.jpg) }
+.work02 .work_nav_prev .bg_wrap { background: url(../images/work_thum_03.jpg) }
+.work02 .work_nav_next .bg_wrap { background: url(../images/work_thum_01.jpg) }
 
 .sub03 .work_nav_prev .bg_wrap { background: url(../images/work_thum_04.jpg) }
 .sub03 .work_nav_next .bg_wrap { background: url(../images/work_thum_02.jpg) }
 
-.sub04 .work_nav_prev .bg_wrap { background: url(../images/work_thum_05.jpg) }
-.sub04 .work_nav_next .bg_wrap { background: url(../images/work_thum_03.jpg) }
+.work04 .work_nav_prev .bg_wrap { background: url(../images/work_thum_05.jpg) }
+.work04 .work_nav_next .bg_wrap { background: url(../images/work_thum_03.jpg) }
 
-.sub05 .work_nav_prev .bg_wrap { background: url(../images/work_thum_06.jpg) }
-.sub05 .work_nav_next .bg_wrap { background: url(../images/work_thum_04.jpg) }
+.work05 .work_nav_prev .bg_wrap { background: url(../images/work_thum_06.jpg) }
+.work05 .work_nav_next .bg_wrap { background: url(../images/work_thum_04.jpg) }
 
-.sub06 .work_nav_prev .bg_wrap { background: url(../images/work_thum_01.jpg) }
-.sub06 .work_nav_next .bg_wrap { background: url(../images/work_thum_05.jpg) }
+.work06 .work_nav_prev .bg_wrap { background: url(../images/work_thum_01.jpg) }
+.work06 .work_nav_next .bg_wrap { background: url(../images/work_thum_05.jpg) }
 
 
 
