--- a/css/styles.css
+++ b/css/styles.css
@@ -743,7 +743,7 @@ body {
 .work01 .work_nav_next .bg_wrap { background: url(../images/work_thum_06.jpg) }
 
 .work02 .work_nav_prev .bg_wrap { background: url(../images/work_thum_03.jpg) }
-.work02 .work_nav_next .bg_wrap { background: url(../images/work_thum_01.jpg) }
+.work02 .work_nav_next .bg_wrap { background: url(../images/work_thum_01.gif) }
 
 .sub03 .work_nav_prev .bg_wrap { background: url(../images/work_thum_04.jpg) }
 .sub03 .work_nav_next .bg_wrap { background: url(../images/work_thum_02.jpg) }
@@ -754,7 +754,7 @@ body {
 .work05 .work_nav_prev .bg_wrap { background: url(../images/work_thum_06.jpg) }
 .work05 .work_nav_next .bg_wrap { background: url(../images/work_thum_04.jpg) }
 
-.work06 .work_nav_prev .bg_wrap { background: url(../images/work_thum_01.jpg) }
+.work06 .work_nav_prev .bg_wrap { background: url(../images/work_thum_01.gif) }
 .work06 .work_nav_next .bg_wrap { background: url(../images/work_thum_05.jpg) }
 
 
