modified:   css/styles.css 	modified:   sub/work03.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -680,6 +680,7 @@ body {
   padding: 12vh 10vw;
 }
 
+.work03_vis02 { background-color: #003a23; }
 .work04_vis02 { background-color: #00a0e9; }
 .work05_vis02 { background-color: #358696; }
 
