--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,34 @@ body {
 #header {
   height: 11.4vh;
   padding: 0 2vw;
+  position: fixed;
+  z-index: 200;
+  left: 0px;
+  right: 0px;
+  width: calc(100vw - var(--scrollbar-width));
+  padding: 0px 1.333rem;
+  /* height: 5rem; */
+  display: flex;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  align-items: center;
+  box-sizing: border-box;
+  top: 0px;
+  
+}
+
+#header::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: -1px 0px 0px;
+  transform: translate3d(0px, 0px, 0px);
+  background-image: linear-gradient(rgba(8, 7, 2, 0.5), rgba(0, 0, 0, 0));
+  color: rgb(255, 255, 255);
+  transition: backdrop-filter 0.3s linear, background-color 0.3s linear;
+  backdrop-filter: blur(30px);
+  background-color: rgba(8, 7, 2, 0.5);
 }
 
 .hd_box_wrap {
@@ -56,7 +84,7 @@ body {
   position: relative;
   border: 1px solid #fff;
   border-radius: 50px;
-  top: 3.3vh;
+  top: 0;
   animation: fade-in 3s;
 }
 
@@ -982,7 +1010,6 @@ body {
     width: 16vw;
     height: 3.8vh;
     line-height: 3.8vh;
-    top: 2vh;
   }
   
 
