--- a/css/styles.css
+++ b/css/styles.css
@@ -460,12 +460,13 @@ body {
 }
 
 .work_list .img_box span {
+  position: absolute;
   background-color: #000;
-  font-size: 2rem;
-  color: #fff;
   padding: 12px 18px;
   border-radius: 50px;
-  position: absolute;
+  font-size: 2rem;
+  font-weight: 300;
+  color: #fff;
 }
 
 .work_list .img_box .type { top: 20px; left: 20px }
@@ -722,7 +723,14 @@ body {
 }
 
 #sub_desc .btn a {
+  color: #b1b1b1;
+  transform-origin: 0% 100%;
+}
+
+#sub_desc .btn a:hover {
   color: #fff;
+  transition: transform .5s ease-in-out
+
 }
 
 #sub_desc .btn a b {
@@ -739,16 +747,16 @@ body {
   inset: 0 0 -4px 0;
 
   transform: scaleX(0);
-  transform-origin: bottom right;
+  transform-origin: 0% 100%;
 }
 
 #sub_desc .btn a:hover b::before {
   transform: scaleX(1);
-  transform-origin: bottom left;
+  transform-origin: 0% 100%;
   }
 
 #sub_desc .btn a:hover b::before {
-  transition: transform .4s ease;
+  transition: transform .5s ease-in-out
 }
 
 
