--- a/css/styles.css
+++ b/css/styles.css
@@ -665,8 +665,8 @@ body {
   text-decoration: none;
   border: 1px solid #fff;
   border-radius: 50px;
-  padding: 0 30px; 
-  line-height: 48px; 
+  padding: 16px 24px; 
+  /* line-height: 48px;  */
   font-size: 2rem;
   color: #fff;
   font-weight: 500;
@@ -1372,6 +1372,10 @@ body {
 
   #sub_vis .sub_mtxt p {
     font-size: 3.2rem;
+  }
+
+  .tabnav li a {
+    font-size: 1.6rem;
   }
 
   #work_vis02 {
