--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,12 @@ body {
 }
 
 .hd_box_wrap {
-  height: 4.4vh;
-  line-height: 4.4vh;
+  height: 5vh;
+  line-height: 5vh;
   width: 12.3vw;
   overflow: hidden;
   position: relative;
-  border: 1px solid #fff;
+  border: 1px solid #999;
   border-radius: 50px;
   top: 0;
   animation: fade-in 3s;
@@ -117,7 +117,7 @@ body {
   display: inline-block;
   float: left;
   color: #fff;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 .hd_box_wrap .hd_box p .dot {
@@ -181,13 +181,13 @@ body {
 
 #visual .mtxt h2 {
   display: inline-block;
-  font-size: 16rem;
+  font-size: 14.6rem;
   font-weight: 300;
   /* letter-spacing: -0.025em;  */
 }
 
-#visual .mtxt h2.cormo {
-  font-size: 17rem;
+#visual .mtxt h2 span.cormo {
+  font-size: 16rem;
 }
 
 #visual .mtxt .point_box {
@@ -274,7 +274,7 @@ body {
 .mtxt_03 p {
   position: absolute;
   /* left: 0; */
-  top: -26px;
+  top: -40px;
 }
 
 .mtxt_04 h2 {
@@ -284,7 +284,7 @@ body {
 .mtxt_04 p {
   position: absolute;
   right: 0;
-  top: -30px;
+  top: -40px;
 }
 
 .mtxt_04 img {
@@ -300,7 +300,7 @@ body {
 #scroll_flow .flow_wrap div {
   float: left;
   color: #fff;
-  font-size: 6rem;
+  font-size: 5rem;
   font-weight: 200;
   /* margin: 0 20px; */
 }
@@ -311,8 +311,8 @@ body {
   width: 100%;
   overflow: hidden;
   position: relative;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
 }
 
 #scroll_flow .flow_wrap {
@@ -352,7 +352,7 @@ body {
 }
 
 #work .work_tit h2 {
-  font-size: 21rem;
+  font-size: 18rem;
   font-weight: 300;
   color: #fff;
 }
@@ -407,11 +407,11 @@ body {
 #work .work_tit .desc {
   position: absolute;
   top: 1vw;
-  left: 28vw;
-  font-size: 2.6rem;
+  left: 46rem;
+  font-size: 2.4rem;
   color: #7e7e7e;
   position: absolute;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
 #work .work_tit p span {
@@ -476,7 +476,7 @@ body {
 .work_list p {
   font-size: 4rem;
   color: #fff;
-  padding: 2.5vw 1vw 0;
+  padding: 1.2vw 0.4vw 0;
 }
 
 .more_btn {
@@ -493,7 +493,7 @@ body {
   width: 220px;
   height: 220px;
   border-radius: 50%;
-  border: 1px solid #fff;
+  border: 1px solid #999;
   color: #fff;
   font-size: 4rem;
   background-color: rgba(0, 0, 0, 0);
@@ -501,12 +501,12 @@ body {
 
 /*** footer ***/
 #footer {
-  border-top: 1px solid #fff;
+  border-top: 1px solid #999;
   
 }
 
 #footer .wrap {
-  margin: 15vh 0 4vh;
+  margin: 8vh 0 4vh;
   padding: 0 2vw;
 }
 
@@ -520,12 +520,16 @@ body {
 }
 
 #footer .tit h2 {
-  font-size: 17rem;
+  font-size: 16.2rem;
   font-weight: 300;
 }
 
-#footer .tit, #footer .tit_01 span {
+#footer .tit {
   color: #fff;
+}
+
+#footer .tit_01 span {
+  color: #999;
 }
 
 #footer .tit h2.cormo {
@@ -584,13 +588,13 @@ body {
 }
 
 #footer .copy p {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 300;
-  color: #fff;
+  color: #999;
 }
 
 #footer .copy p span {
-  font-size: 2.4rem;
+  /* font-size: 2.4rem; */
   vertical-align: bottom;
 }
 
@@ -603,19 +607,21 @@ body {
 
 #sub_vis .sub_mtxt {
   color: #fff;
-  padding: 32vh 0 22vh 0;
+  padding: 26vh 0 16vh 0;
   word-wrap:break-word;
 }
 
 #sub_vis .sub_mtxt h2 {
   font-size: 4rem;
   text-transform: uppercase;
+  margin-left: 4px;
 }
 
 #sub_vis .sub_mtxt h1 {
   font-weight: 300;
-  font-size: 14rem;
-  margin: 4vh 0 2vh 0;
+  font-size: 12.8rem;
+  margin: 0.6vh 0 3vh 0;
+  line-height: 1;
 }
 
 #sub_vis .sub_mtxt h1 .mo {
@@ -624,7 +630,7 @@ body {
 
 #sub_vis .sub_mtxt p {
   font-weight: 300;
-  font-size: 5rem;
+  font-size: 4.2rem;
   color: #bfff07;
   line-height: 1.4;
 }
@@ -681,7 +687,7 @@ body {
 
 
 #sub_desc {
-  margin: 20vh 0;
+  margin: 16vh 0;
 }
 
 #sub_desc.work06{
@@ -807,11 +813,11 @@ body {
   width: 100%;
   position: relative;
   margin-top: 5vh;
-  border-top: 1px solid #cecece;
+  border-top: 1px solid #999;
 }
 
 #work_nav .work_nav_prev {
-  border-right: 1px solid #cecece;
+  border-right: 1px solid #999;
 }
 
 #work_nav>a {
@@ -908,7 +914,7 @@ body {
 #work_nav>a .work_nav_info h3 {
   position: relative;
   width: auto;
-  font-size: 6rem;
+  font-size: 5.6rem;
   color: #fff;
   font-weight: 500;
   text-transform: uppercase;
@@ -925,10 +931,10 @@ body {
 }
 
 #work_nav>a .work_nav_info p {
-  font-size: 3rem;
+  font-size: 2.4rem;
   color:#fff;
   font-weight: 300;
-  margin-top: 16px;
+  margin-top: 8px;
   opacity: 0;
   -webkit-transition: all 1s ease-out;
   transition: all 0.5s ease-out;
@@ -939,38 +945,111 @@ body {
 
 
 
-@media all and (max-width:1440px) {
-  #visual .mtxt h2.cormo, #visual .mtxt h2 {
-    font-size: 14rem;
+@media all and (max-width:1470px) {
+
+  .hd_box_wrap {
+    width: 14vw;
   }
+
+  #nav li a {
+    font-size: 2rem;
+  }
+
+
+  #visual .mtxt h2 {
+    font-size: 12rem;
+  }
+
+  #visual .mtxt h2 span.cormo {
+    font-size: 13.6rem;
+  }
+
   #visual .mtxt p {
     font-size: 3rem;
   }
 
+  .mtxt_03 p, .mtxt_04 p {
+    top: -28px;
+  }
+
   #scroll_flow .flow_wrap div {
-    font-size: 4rem;
+    font-size: 3.2rem;
+  }
+
+  #work {
+    margin: 18vh 0;
   }
 
   #work .work_tit h2 {
-    font-size: 16rem;
+    font-size: 13.6rem;
+  }
+
+  #work .work_tit h2.cormo {
+    font-size: 15rem;
   }
 
   #work .work_tit .desc {
-    left: 32vw;
+    font-size: 2.0rem;
+  }
+  
+
+  #work .work_tit .desc {
+    left: 35rem;
+  }
+
+  .work_list li {
+    margin-bottom: 32px;
+  }
+
+  .work_list p {
+    padding: 1.6vw 0.8vw 0;
+    font-size: 3.2rem;
   }
 
   #scroll_flow {
-    height: 12vh;
-    line-height: 12vh;
+    height: 10vh;
+    line-height: 10vh;
   }
 
-  #footer .tit h2, #footer .tit h2.cormo {
-    font-size: 16rem;
+  #footer .tit h2 {
+    font-size: 13.6rem;
+  }
+
+  #footer .tit h2.cormo {
+    font-size: 15rem;
   }
 
   #footer .tit h2 span, #footer .contact p {
     font-size: 3rem;
   }
+
+  /*** sub page ***/
+
+  #sub_vis .sub_mtxt h2 {
+    font-size: 2.6rem;
+  }
+
+  #sub_vis .sub_mtxt h1 {
+    font-size: 11.2rem;
+  }
+
+  #sub_vis .sub_mtxt p {
+    font-size: 3.2rem;
+  }
+
+  #sub_desc .row {
+    gap: 4.6rem;
+    flex-wrap: wrap;
+  }
+
+  #sub_desc .row dt {
+    margin-bottom: 1.6vh;
+  }
+
+  #work_nav>a .work_nav_info h3 {
+    font-size: 4.8rem;
+  }
+
 }
 
 @media all and (max-width:1280px) {
@@ -978,27 +1057,21 @@ body {
   .hd_box_wrap {
     width: 18vw;
   }
-  #visual .mtxt h2.cormo, #visual .mtxt h2 {
-    font-size: 11rem;
+  
+  #visual .mtxt .point_box {
+    /* padding: 2vh 0; */
   }
 
-  #visual .mtxt .point_box {
-    padding: 2vh 0;
-  }
   #visual .mtxt p {
     font-size: 2.8rem;
   }
 
-  .mtxt_03 p {
-    top: -18px;
+  #visual .mtxt h2 {
+    font-size: 12rem;
   }
 
-  .mtxt_04 p {
-    top: -20px;
-  }
-
-  #work .work_tit h2 {
-    font-size: 14rem;
+  #visual .mtxt h2 span.cormo {
+    font-size: 13.6rem;
   }
 
   #work .work_tit .desc {
@@ -1023,7 +1096,11 @@ body {
     font-size: 3.2rem;
   }
 
-  #footer .tit h2, #footer .tit h2.cormo {
+  #footer .tit h2 {
+    font-size: 12.6rem;
+  }
+
+  #footer .tit h2.cormo {
     font-size: 14rem;
   }
 
@@ -1032,22 +1109,6 @@ body {
 
   .sub_wrap {
     margin: 0 5.3vw;
-  }
-
-  #sub_vis .sub_mtxt {
-    padding: 24vh 0 14vh 0;
-  }
-
-  #sub_vis .sub_mtxt h2 {
-    font-size: 3.6rem;
-  }
-
-  #sub_vis .sub_mtxt h1 {
-    font-size: 12rem;
-  }
-
-  #sub_vis .sub_mtxt p {
-    font-size: 4.2rem;
   }
 
   .sub_vis_bg {
@@ -1096,18 +1157,18 @@ body {
 
 @media all and (max-width:1024px) {
   #header {
-    height: 7.4vh;
+    height: 8vh;
   }
 
   #nav {
     top: 2.6vh;
   }
 
-  .hd_box_wrap {
+  /* .hd_box_wrap {
     width: 16vw;
     height: 3.8vh;
     line-height: 3.8vh;
-  }
+  } */
   
 
   .hd_box_wrap .hd_box p {
@@ -1129,21 +1190,39 @@ body {
   #visual .mtxt p {
     font-size: 2.2rem;
   }
+
   #visual .mtxt .point_box {
-    padding: 1.6vh 0;
+    /* padding: 1.6vh 0; */
   }
 
-  #visual .mtxt h2.cormo, #visual .mtxt h2 {
+  #visual .mtxt h2 {
     font-size: 10rem;
   }
 
+  #visual .mtxt h2 span.cormo {
+    font-size: 11.6rem;
+  }
+
+  #visual .mtxt .point_box {
+    width: 22vw;
+    padding: 3vh 0;
+  }
+
+  .mtxt_04 img {
+    width: 8vw;
+  }
+
+  .mtxt_03 p, .mtxt_04 p {
+    top: -16px;
+  }
+
   #scroll_flow {
-    height: 7vh;
-    line-height: 7vh;
+    height: 8vh;
+    line-height: 8vh;
   }
 
   #scroll_flow .flow_wrap div {
-    font-size: 3rem;
+    font-size: 2.6rem;
   }
 
   #work {
@@ -1154,17 +1233,21 @@ body {
     font-size: 11rem;
   }
 
+  #work .work_tit h2.cormo {
+    font-size: 11.6rem;
+  }
+
   #work .work_tit .tit_02 {
     margin-left: 12vw;
   }
 
   #work .work_tit .num {
-    font-size: 2.2rem;
+    font-size: 4.2rem;
   }
 
   #work .work_tit .desc {
     font-size: 1.8rem;
-    left: 29vw;
+    left: 28rem;
   }
 
   .work_list li {
@@ -1172,7 +1255,21 @@ body {
   }
 
   .work_list .img_box {
-    min-height: 14vh;
+    min-height: 15vh;
+  }
+
+  .work_list .img_box span {
+    font-size: 1.4rem;
+  }
+
+  .work_list .img_box .year {
+    top: 14px;
+    right: 14px;
+  }
+
+  .work_list .img_box .type {
+    top: 14px;
+    left: 14px;
   }
 
   .work_list p {
@@ -1185,12 +1282,16 @@ body {
     font-size: 2.4rem;
   }
 
-  #footer .wrap {
+  /* #footer .wrap {
     margin: 6vh 0 3vh;
+  } */
+
+  #footer .tit h2 {
+    font-size: 10rem;
   }
 
-  #footer .tit h2, #footer .tit h2.cormo {
-    font-size: 10rem;
+  #footer .tit h2.cormo {
+    font-size: 11.2rem;
   }
 
   #footer .tit h2 span, #footer .contact p {
@@ -1212,23 +1313,6 @@ body {
     background-attachment: scroll;
   }
 
-  #sub_vis .sub_mtxt h1 {
-    font-size: 10rem;
-  }
-
-  #sub_vis .sub_mtxt h2 {
-    font-size: 3.2rem;
-  }
-
-  #sub_vis .sub_mtxt h1 {
-    font-size: 10rem;
-    margin: 5vh 0 3.8vh 0;
-  }
-
-  #sub_vis .sub_mtxt p {
-    font-size: 3.8rem;
-  }
-
   #sub_desc .row {
     gap: 5.4rem;
     flex-wrap: wrap;
@@ -1241,15 +1325,16 @@ body {
   #work_nav>a .work_nav_info {
     padding-top: 4vh;
   }
+
   #work_nav>a .work_nav_info h3 {
-    font-size: 3.8rem;
+    font-size: 3.2rem;
   }
 
   #work_nav>a .work_nav_info p {
-    margin-top: 10px;
+    margin-top: 4px;
   }
   #work_nav>a .work_nav_info p {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
 }
@@ -1257,17 +1342,17 @@ body {
 @media all and (max-width:960px){
   
   #work .work_tit .desc {
-    left: 32vw;
+    /* left: 32vw; */
   }
 
 }
 
 
-/*태블릿*/
-@media all and (max-width:767px){
+/*테블릿*/
+@media all and (max-width:768px){
   
   .hd_box_wrap {
-    width: 18vw;
+    width: 20vw;
   }
 
   .hd_box_wrap .hd_box p .dot {
@@ -1285,11 +1370,11 @@ body {
   }
 
   #visual, .mtxt_wrap {
-    height: 60vh;
+    height: 80vh;
   }
-
+  
   #visual .mtxt .point_box {
-    padding: 1.6vh 0;
+    /* padding: 1.6vh 0; */
   }
 
   #scroll_flow {
@@ -1301,26 +1386,58 @@ body {
     font-size: 2.4rem;
   }
 
-  #work {
-    margin: 12vh 0;
-  }
-  
+ 
+
   #visual .mtxt h2.cormo, #visual .mtxt h2 {
     font-size: 7rem;
   }
 
   #visual .mtxt .point_box {
-    width: 30vw;
+    width: 26vw;
+    padding: 2.4vh 0;
   }
-  #work .work_tit h2 {
-    font-size: 9rem;
+  
+  #visual .mtxt h2 {
+    font-size: 7rem;
   }
+
+  #visual .mtxt h2 span.cormo {
+    font-size: 8.6rem;
+  }
+
+  #visual .mtxt p {
+    font-size: 2rem;
+  }
+
+  .mtxt_04 img {
+    margin-right: 8px;
+  }
+
+  #work {
+    margin: 12vh 0;
+  }
+
+  #work .work_tit {
+    margin-bottom : 32px;
+  }
+
+  .work_list {
+    gap: 12px;
+  }
+  
+  /* #work .work_tit h2 {
+    font-size: 11rem;
+  }
+
+  #work .work_tit h2.cormo {
+    font-size: 12rem;
+  } */
 
   #work .work_tit .tit_02 {
-    margin-left: 12vw;
+    margin-left: 22vw;
   }
 
-  #work .work_tit .desc {
+  #work .work_tit .tit_02 img {
     display: none;
   }
 
@@ -1355,19 +1472,25 @@ body {
   }
 
   #footer .contact {
-    margin: 6vh 0 8vh;
+    margin: 8vh 0 8vh;
   }
 
   /* sub page */
+
+  .sub_wrap {
+    margin: 0 6vw;
+  }
+
+  #sub_vis .sub_mtxt {
+    padding: 22vh 0 12vh 0;
+  }
 
   #sub_vis .sub_mtxt h2 {
     font-size: 2.4rem;
   }
 
   #sub_vis .sub_mtxt h1 {
-    font-size: 7rem;
-    margin: 4vh 0 3vh 0;
-  
+    font-size: 8rem;  
   }
 
   #sub_vis .sub_mtxt p {
@@ -1420,11 +1543,24 @@ body {
 /*** 모바일 ***/
 @media all and (max-width:576px){
 
+  #header {
+    position: static;
+  }
+
+  #header a {
+    text-align: center;
+    margin: 0 auto;
+  }
+
   .hd_box_wrap {
-    width: 22vw;
+    width: 50vw;
   }
   .hd_box_wrap .hd_box p {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
+  }
+
+  #nav {
+    display: none;
   }
 
   #nav li a {
@@ -1432,12 +1568,28 @@ body {
     margin: 0px 10px;
   }
 
-  #sub_vis .sub_mtxt {
-    padding: 18vh 0 8vh 0;
+ 
+  #visual, .mtxt_wrap {
+    height: 64vh;
   }
 
-  #visual .mtxt h2.cormo, #visual .mtxt h2 {
-    font-size: 4.6rem;
+  #visual .mtxt {
+    top: 48%;
+  }
+
+  .mtxt_02 {
+    transform: translate(6vw, 0px);
+  }
+  .mtxt_03 {
+    transform: translate(-14vw, 0px);
+  }
+
+  #visual .mtxt h2 {
+    font-size: 5rem;
+  }
+
+  #visual .mtxt h2 span.cormo {
+    font-size: 5.6rem;
   }
 
   #visual .mtxt p {
@@ -1449,6 +1601,10 @@ body {
     padding: 1.4vh 0;
   }
 
+  #visual .mtxt .mtxt_03 p,  #visual .mtxt .mtxt_04 p {
+    display: none;
+  }
+
   .mtxt_04 img {
     margin-right: 2vw;
   }
@@ -1456,6 +1612,10 @@ body {
   #scroll_flow {
     height: 6vh;
     line-height: 6vh;
+  }
+
+  #scroll_flow .flow_wrap div {
+    font-size: 2rem;
   }
 
   #scroll_flow .flow_wrap img {
@@ -1467,6 +1627,10 @@ body {
     padding: 0 4vw;
   }
 
+  #work .work_tit h2.cormo {
+    font-size: 8rem;
+  }
+
   #work .work_tit h2 {
     font-size: 8rem;
   }
@@ -1475,8 +1639,12 @@ body {
     margin-bottom: 3vh;
   }
 
+  #work .work_tit .num {
+    font-size: 3.8rem;
+  }
+
   #work .work_tit .tit_02 {
-    margin-left: 18vw;
+    margin-left: 30vw;
   }
 
   #work .work_tit .desc {
@@ -1488,15 +1656,26 @@ body {
   }
 
   .work_list li {
-    margin-bottom: 6vh;
+    margin-bottom: 4vh;
   }
+  
 
   .work_list .img_box span {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+  }
+
+  .work_list .img_box .year {
+    top: 12px;
+    right: 12px;
+  }
+
+  .work_list .img_box .type {
+    top: 12px;
+    left: 12px;
   }
 
   .work_list p {
-    padding: 4vw 2vw 0;
+    padding: 2.4vw 1.4vw 0;
   }
 
   #work .work_tit .tit_02 img {
@@ -1514,8 +1693,11 @@ body {
     padding: 0 4vw;
   }
 
-  #footer .tit h2, #footer .tit h2.cormo {
-    font-size: 5.8rem;
+  #footer .tit h2 {
+    font-size: 5.6rem;
+  }
+  #footer .tit h2.cormo {
+    font-size: 6.4rem;
   }
 
   #footer .tit h2 span, #footer .contact p {
@@ -1528,7 +1710,7 @@ body {
 
   #footer .tit h2 img {
     margin-top: 5px;
-    width: 12vw;
+    width: 10vw;
   }
 
 
@@ -1542,6 +1724,10 @@ body {
 
   /* sub page */
 
+  #sub_vis .sub_mtxt {
+    padding: 12vh 0 8vh 0;
+    /* text-align: center; */
+  }
 
   #sub_vis .sub_mtxt h2 {
     font-size: 2rem;
@@ -1549,7 +1735,7 @@ body {
 
   #sub_vis .sub_mtxt h1 {
     font-size: 5rem;
-    margin: 3vh 0 2vh 0;
+    margin: 1vh 0 1.8vh 0;
   }
 
   #sub_vis .sub_mtxt p {
@@ -1580,6 +1766,12 @@ body {
     font-size: 2.8rem;
   }
 
+}
 
+@media all and (max-width:375px){
+
+  #sub_vis .sub_mtxt h1 .mo {
+    display: block;
+  }
 
 }
