modified:   css/styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -430,9 +430,9 @@ body {
   margin-bottom: 80px;
 }
 
-.js-load {
+/* .js-load {
   display: none;
-}
+} */
 
 .work_list .img_box {
   display: block;
