--- a/css/styles.css
+++ b/css/styles.css
@@ -191,12 +191,11 @@ body {
 }
 
 #visual .mtxt .point_box {
-  width: 24vw;
-  background-color: #bfff07;
-  color: #000;
-  padding: 4vh 0;
+  width: 14vw;
+  display: inline-block;
   border-radius: 60px;
   vertical-align: text-bottom;
+  overflow: hidden;
 }
 
 #visual .mtxt p {
@@ -292,7 +291,7 @@ body {
 .mtxt_04 img {
   vertical-align: middle;
   margin-right: 20px;
-  width: 7vw;
+  width: 6.5vw;
   animation: rotatetxt 6s linear infinite;
 }
 
@@ -966,6 +965,10 @@ body {
     font-size: 13.6rem;
   }
 
+  #visual .mtxt .point_box {
+    width: 16vw;
+  }
+
   #visual .mtxt p {
     font-size: 3rem;
   }
@@ -1061,7 +1064,7 @@ body {
   }
   
   #visual .mtxt .point_box {
-    /* padding: 2vh 0; */
+    width: 18vw;
   }
 
   #visual .mtxt p {
@@ -1206,8 +1209,8 @@ body {
   }
 
   #visual .mtxt .point_box {
-    width: 22vw;
-    padding: 3vh 0;
+    width: 20vw;
+    
   }
 
   .mtxt_04 img {
@@ -1395,8 +1398,7 @@ body {
   }
 
   #visual .mtxt .point_box {
-    width: 26vw;
-    padding: 2.4vh 0;
+    width: 20vw;
   }
   
   #visual .mtxt h2 {
@@ -1599,8 +1601,7 @@ body {
   }
 
   #visual .mtxt .point_box {
-    width: 33vw;
-    padding: 1.4vh 0;
+    /* width: 33vw; */
   }
 
   #visual .mtxt .mtxt_03 p,  #visual .mtxt .mtxt_04 p {
