--- a/css/reset.css
+++ b/css/reset.css
@@ -51,3 +51,8 @@ ul, dl, dt, dd {margin:0;padding:0;list-style:none}
 p {margin:0;padding:0;word-break:break-all}
 
 a {color:#000;text-decoration:none}
+
+
+::-webkit-scrollbar{ width:12px; }
+::-webkit-scrollbar-track{ background-color:rgba(0, 0, 0, 0.3); }
+::-webkit-scrollbar-thumb{ border-radius:6px;border:4px solid #000;background-color:rgba(255, 255, 255, 0.3); }
