--- a/css/styles.css
+++ b/css/styles.css
@@ -890,12 +890,12 @@ body {
 .work02 .work_nav_next .bg_wrap { background: url(../images/work_thum_05.jpg) }
 
 .work03 .work_nav_prev .bg_wrap { background: url(../images/work_thum_04.jpg) }
-.work03 .work_nav_next .bg_wrap { background: url(../images/work_thum_02.jpg) }
+.work03 .work_nav_next .bg_wrap { background: url(../images/work_thum_01.gif) }
 
 .work04 .work_nav_prev .bg_wrap { background: url(../images/work_thum_05.jpg) }
 .work04 .work_nav_next .bg_wrap { background: url(../images/work_thum_03.jpg) }
 
-.work05 .work_nav_prev .bg_wrap { background: url(../images/work_thum_06.jpg) }
+.work05 .work_nav_prev .bg_wrap { background: url(../images/work_thum_02.jpg) }
 .work05 .work_nav_next .bg_wrap { background: url(../images/work_thum_04.jpg) }
 
 .work06 .work_nav_prev .bg_wrap { background: url(../images/work_thum_01.gif) }
